1.9.1
* "btc.Uint256IdxLen" and "utxo.UtxoIdxLen" set back to 8 bytes, to decrease memory usage
* Client: fixed the way best external IP is selected
* WebUI/Txs: Limit memory pool fees graph to first 10 MB
* WebUI: Do not display wallet name(s) in each tab's header (privacy)
* WebUI/Blocks: Dispaly either mining info or block processing info
* client/wallet: Use hashmap (instead of list) for addresses with "CFG.AllBalances.UseMapCnt"+ unspent outputs
* WebUI: Do not show Wallet and MakeTx tabs in NoWallet mode
* WebUI/Wallet: Show QR code when clicking on the address

1.9.0 - 2017-05-05
* Got rid of "qdb" for UTXO.
* New package "lib/utxo" extracted from "lib/chain"
* Announce a new block to peers before its fully verified (like Core 0.14.0 / net protocol 70015)
* bdb: -purgeto <block_height> to purge all blocks up to given height
* client: does not offer to import core's blocks-db anymore
* Optimized the way new blocks are written to disk (verification should be faster now)
* Client: New TextUI command "purge", to purge unspendable records from UTXO-db
* New tool "fetchblock" and new functions in "lib/others/utils" for fetching raw blocks from the web
* UTXO index has now configurable length (via "lib/utxo/UtxoIdxLen"), to address possible collision attacks (now set to 16 bytes)
* Block index increased to 16 bytes, to address possible collision attacks
* Client: Fixed "ConnectOnly" mode
* WebUI: Show MinValue for accounted outputs on "Wallet" and "MakeTx" tabs
* Client: New config value FreeAtStart, to free all possible memory after initial loading of block chain
* WebUI/Wallet: Fixed problem with switching to different wallet while balance for previous none is still being fetched
* Client: the balance of all the addresses is fetched after the blockchain finishes loading. It saves memory and speeds up potential rescans

1.8.1
* Client: each call to common.BlockChain.DeleteBranch() also does DelB2G() recursively